# Node

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  campaign.html  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  windows-release-artifact.yml
docs/: ATP_CREDIT_TRUST_MODEL.md  ATP_IMPLEMENTATION_STATUS.md  ATP_NETWORK_ARCHITECTURE.md  AUDIT_LABOR_NETWORK.md  COGNITION_PROOFS.md  DEVELOPER_GUIDE.md  GENESIS_AUTO_MODE.md  GUARDIAN_INDEX.md  INSTALL.md  JOIN_NETWORK.md  PROOF_OF_PROTECTION.md  REPOSITORY_AUDIT_PROFILE.md  SELF_HOSTING_SECURITY.md  SOURCE_GATEWAY.md
network/: README.md  bootstrap.json
protocol/: README.md
protocol/fixtures/: repository-audit-contract.v0.1.json  repository-audit-receipt.v0.1.json
protocol/schemas/: audit-contribution.v0.1.schema.json  audit-work-unit-claim.v0.1.schema.json  audit-work-unit.v0.1.schema.json  autonomous-finality.v0.1.schema.json  cognition-proof.v0.1.schema.json  credit-ledger.v0.1.schema.json  final-audit-report.v0.1.schema.json  protocol-audit-campaign.v0.1.schema.json  repository-audit-contract.v0.1.schema.json  repository-audit-receipt.v0.1.schema.json  verification-result.v0.1.schema.json
protocol/skills/: cyphes-audit-skill.v0.1.manifest.json  cyphes-audit-skill.v0.1.md  cyphes-audit-skill.v0.4.manifest.json  cyphes-audit-skill.v0.4.md
protocol/targets/: guardian-target-index.json
relay/: Cargo.toml  Dockerfile  README.md  compose.yaml  fly.toml
relay/deploy/: cyphes-network.service  deploy-fly.sh  install-systemd.sh
relay/src/: main.rs
release/v0.15.1/: README.md  SHA256SUMS.txt
release/v0.15.2/: README.md  SHA256SUMS.txt
release/v0.15.3/: README.md  SHA256SUMS.txt
release/v0.15.4/: README.md  SHA256SUMS.txt
release/v0.15.7/: README.md  SHA256SUMS.txt
release/v0.16.0/: README.md  SHA256SUMS.txt
release/v0.16.1/: README.md  SHA256SUMS.txt
release/v0.16.10/: README.md  SHA256SUMS.txt
release/v0.16.11/: README.md  SHA256SUMS.txt
release/v0.16.2/: README.md  SHA256SUMS.txt
release/v0.16.3/: README.md  SHA256SUMS.txt
release/v0.16.4/: README.md  SHA256SUMS.txt
release/v0.16.5/: README.md  SHA256SUMS.txt
release/v0.16.6/: README.md  SHA256SUMS.txt
release/v0.16.7/: README.md  SHA256SUMS.txt
release/v0.16.8/: README.md  SHA256SUMS.txt
release/v0.16.9/: README.md  SHA256SUMS.txt
release/v0.17.0/: README.md  SHA256SUMS.txt
release/v0.5.0/: README.md
release/v0.5.1/: README.md
release/v0.5.2/: README.md
release/v0.5.3/: README.md
release/v0.5.4/: README.md
release/v0.5.5/: README.md
release/v0.5.6/: README.md
release/v0.6.2/: README.md
release/v0.6.3/: README.md  SHA256SUMS.txt
release/v0.6.4/: README.md  SHA256SUMS.txt
release/v0.6.5/: README.md  SHA256SUMS.txt
release/v0.7.1/: README.md  SHA256SUMS.txt
release/v0.7.10/: README.md  SHA256SUMS.txt
release/v0.7.11/: README.md  SHA256SUMS.txt
release/v0.7.12/: README.md  SHA256SUMS.txt
release/v0.7.13/: README.md  SHA256SUMS.txt
release/v0.7.14/: README.md  SHA256SUMS.txt
release/v0.7.2/: README.md  SHA256SUMS.txt
release/v0.7.3/: README.md  SHA256SUMS.txt
release/v0.7.4/: README.md  SHA256SUMS.txt
release/v0.7.5/: README.md  SHA256SUMS.txt
release/v0.7.6/: README.md  (+1 more)
scripts/: assert-genesis-auto-mode.mjs  generate-guardian-index.mjs  publish-network-config.sh  verify-atp-l1.sh
source-gateway/: Cargo.toml  Dockerfile  README.md  compose.yaml  fly.toml
source-gateway/src/: main.rs
src/: App.tsx  campaign.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.partner.conf.json  tauri.requester.conf.json  tauri.worker.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: atp.rs  audit_labor.rs  audit_profile.rs  audit_runtime.rs  bundle.rs  commands.rs  github.rs  lib.rs  main.rs  p2p.rs  state.rs  store.rs  worker.rs
(+49 files in other folders)
