[package]
name = "cyphes-desktop"
version = "0.1.0"
description = "CYPHES v0.1 desktop shell for the autonomous internet"
authors = ["CYPHES-ATP"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cyphes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
libp2p = { version = "0.56", features = ["cbor", "dns", "gossipsub", "macros", "mdns", "noise", "request-response", "tcp", "tokio", "websocket", "yamux"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.2"
serde_json = "1"
sha2 = "0.11"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
